# english-learning-server

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260416_000001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  dictionary.py  translation.py  vocabulary.py  word_detail.py
app/clients/: dictionary_api_client.py  openai_client.py  youdao_client.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  models.py  session.py
app/db/models/: __init__.py  ai_session.py  base.py  dictionary.py  review.py  user.py  vocabulary.py
app/repositories/: ai_session_repository.py  dictionary_repository.py  review_repository.py  user_repository.py  vocabulary_repository.py
app/schemas/: auth.py  common.py  dictionary.py  translation.py  vocabulary.py  word_detail.py
app/scripts/: init_db.py
app/services/: auth_service.py  dictionary_cache_service.py  dictionary_service.py  translation_service.py  user_service.py  vocabulary_service.py  word_detail_service.py
docs/: auth-api.md  database-design.md  dictionaryapi-dev.md  word-detail-api.md  youdao-api.md
tests/: test_auth_api.py  test_dictionary_api.py  test_pg_connection.py  test_settings.py  test_translation_api.py  test_vocabulary_api.py  test_word_detail_api.py
